--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
+        "dedoc/scramble": "^0.13.2",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.7",
         "laravel/pail": "^1.2.2",
